--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "styled-components": "^5.0.1",
-    "expo-app-auth": "~8.0.0"
+    "expo-app-auth": "~8.0.0",
+    "react-native-maps": "0.26.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
