--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redux": "^4.0.5",
     "styled-components": "^5.0.1",
     "expo-app-auth": "~8.0.0",
-    "react-native-maps": "0.26.1"
+    "react-native-maps": "0.26.1",
+    "expo-barcode-scanner": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
