--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@react-native-community/masked-view": "^0.1.7",
     "apollo-boost": "^0.4.7",
     "expo": "~36.0.0",
+    "expo-app-auth": "~8.0.0",
     "expo-av": "~8.0.0",
+    "expo-barcode-scanner": "~8.0.0",
     "expo-blur": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
     "firebase": "^7.12.0",
@@ -22,6 +24,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-maps": "0.26.1",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
@@ -29,6 +32,7 @@
     "react-native-screens": "^2.3.0",
     "react-native-showdown": "^0.4.0",
     "react-native-svg": "9.13.3",
+    "react-native-tab-view": "^2.13.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.0.1",
     "react-navigation": "^4.3.1",
@@ -36,10 +40,7 @@
     "react-navigation-tabs": "^2.8.6",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "styled-components": "^5.0.1",
-    "expo-app-auth": "~8.0.0",
-    "react-native-maps": "0.26.1",
-    "expo-barcode-scanner": "~8.0.0"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
