--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-navigation-tabs": "^2.8.6",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "react-native-appearance": "~0.3.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
