--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.7",
     "apollo-boost": "^0.4.7",
     "expo": "~36.0.0",
@@ -19,12 +20,15 @@
     "firebase": "^7.12.0",
     "graphql": "^14.6.0",
     "lottie-react-native": "~2.6.1",
+    "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-apollo": "^3.1.3",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-appearance": "~0.3.1",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-maps": "0.26.1",
+    "react-native-modal-datetime-picker": "^8.5.1",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
@@ -40,8 +44,7 @@
     "react-navigation-tabs": "^2.8.6",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "styled-components": "^5.0.1",
-    "react-native-appearance": "~0.3.1"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
